
 - Fixed a crash when using Octtrees caused by unnecessary dropping of meshes when 
   deserializing the scene node.

GUI:

  - Added setColor and setScaleImage to GUIImage.

  - Made GUIListBox clip properly.

  - added getOSOperator to GUIEnvironment (for clipboard access in elements) and updated CGUIEditBox.

  - Can now load/save gui environment from/to an element.

  - Most element set functions now have a corresponding get function

  - Fixed a bug with resizing the gui environment when the device is resized

  - XML bitmap fonts now load textures from the XML file directory rather than the current one

GUI Editor:

  - Added cut/copy/paste using clipboard and xml (via memory file). Will have problems in Linux due 
    to no clipboard support

  - Added texture attribute element

  - Added CGUIPanel, a container with optional scrollbars. Originally submitted by Asger Feldthaus


-------------------------------------------
Changes in version 1.3 (15 Mar 2007)

- SMaterial structure changed:
   - Enable Irrlicht to change TextureAddress Mode (Clamping), for each layer separately
   - Added Texture matrices to SMaterial for all texture layers
   - Removed the anonymous union/struct access to textures and material flags.
	  Now, Texture1..4 is removed - use Textures[i] instead
	  The Flags[x] is replaced by setFlags(x, bool) resp. getFlags(x)

- The methods OnPreRender and OnPostRender of ISceneNode have been changed to
  OnRegisterSceneNode() and OnAnimate(). Also, they are now called at different
  times: OnAnimate is called every frame before anything else, removing the
  one-frame-lag Irrlicht suffered until now. To make most of your own scene
  nodes work again, it should be enough to rename OnPreRender()
  to OnRegisterSceneNode() and OnPostRender() to OnAnimate() in most cases.

- ISceneNode::getMaterialCount and getMaterial now use u32 instead of s32. You will also need 
  to update this in your custom scene nodes.
